@@ -37,6 +37,8 @@ http://www.springframework.org/schema/mvc/spring-mvc.xsd">
 	<context:component-scan base-package="org.erp.tarak.salesreturn" />
 	<context:component-scan base-package="org.erp.tarak.salesPayment" />
 	
+	<context:component-scan base-package="org.erp.tarak.productionorder" />
+	<context:component-scan base-package="org.erp.tarak.productioninvoice" />
 	<context:component-scan base-package="org.erp.tarak.purchaseorder" />
 	<context:component-scan base-package="org.erp.tarak.purchaseinvoice" />
 	<context:component-scan base-package="org.erp.tarak.purchasereturn" />
@@ -82,6 +84,10 @@ http://www.springframework.org/schema/mvc/spring-mvc.xsd">
 				<value>org.erp.tarak.salesPayment.SalesPayment</value>
 				<value>org.erp.tarak.salesPayment.SalesPaymentItem</value>
 
+				<value>org.erp.tarak.productionorder.ProductionOrder</value>
+				<value>org.erp.tarak.productionorder.ProductionOrderItem</value>
+				<value>org.erp.tarak.productioninvoice.ProductionInvoice</value>
+				<value>org.erp.tarak.productioninvoice.ProductionInvoiceItem</value>
 				<value>org.erp.tarak.purchaseorder.PurchaseOrder</value>
 				<value>org.erp.tarak.purchaseorder.PurchaseOrderItem</value>
 				<value>org.erp.tarak.purchaseinvoice.PurchaseInvoice</value>
